RichwoodNew/src/objects/Opportunity_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Opportunity Assets</relationshipLabel>
        <relationshipName>Opportunity_Assets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Opportunity_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OA{00000}</displayFormat>
        <label>Opportunity Asset</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>